@@ -174,6 +174,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - POV-Ray                Carl Fürstenberg
 - PowerBuilder           Doug Porter
 - PowerShell             Frode Aarebrot
+- ProFTPd                Benny Baumann
 - Progress               Marco Aurelio de Pasqual
 - Prolog                 Benny Baumann
 - Property Files         Edy Hinzen
