@@ -21,6 +21,7 @@ Version 1.0.8.10
      * Falcon (billykater)
      * HTML5 (Robert Lidberg)
      * LLVM (Azriel Fasten)
+     * ProFTPd (Benny Baumann)
      * PyCon (Benny Baumann)
      * UnrealScript (pospi)
      * YAML (Josh Ventura)
